tests/negative/test_cast_same_type_ref.orb
fnc main () () {
    sym (x 0);
    = (cast i32 x) 0;
};